syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
package letterService;

message Lid{
  uint64 lid=1;
}

message Letter{
  uint64 lid=1;
  string sender=2;
  string receiver=3;
  string theme=4;
  string text=5;
  uint64 dateTime=6;
  bool isWatched=7;
}

message DirName{
  uint64 dirName=1;
}

message Email{
  string email=1;
}

message Response{
  bool ok=1;
  string description=2;
}

message LetterListResponse {
  repeated Letter letter=1;
  Response result=2;
}

message LetterResponse {
  Letter letter=1;
  Response result=2;
}

message DirLid{
  uint64 did=1;
  uint64 lid=2;
}

service LetterService{
  rpc GetLettersByDirRecv(DirName) returns (LetterListResponse);
  rpc GetLettersByDirSend(DirName) returns (LetterListResponse);
  rpc GetLettersRecv(Email) returns (LetterListResponse);
  rpc GetLettersSend(Email) returns (LetterListResponse);
  rpc SaveLetter(Letter) returns (Response);
  rpc WatchedLetter(Lid) returns (LetterResponse);

  rpc AddLetterToDir(DirLid) returns (Response);
  rpc RemoveLetterFromDir(DirLid) returns (Response);
  rpc RemoveDir(DirName) returns (Response);
}

